# communicate_lib

./: .gitignore  CMakeLists.txt  README.md
cmake/: copy_shared.cmake  install_systemLib.cmake
customized/interface/: README.md
customized/source/: README.md
doc/: OTA_设计图.drawio
src/base/: Json.cpp  Json.h  logconfig.h  singleton.h  utils_method.h
src/common/: data_manager.cpp  data_manager.h
src/common/communicateViaHTTP/: CMakeLists.txt  httpcomm_server.h  httpcomm_structs.h  httpcomm_structs.txt  httpreq_ways.cpp  httpreq_ways.h  multipart_parser.cpp  multipart_parser.h
src/common/communicateViaHTTP/reqTask/: httpreq_ways.cpp  httpreq_ways.h
src/common/communicateViaHTTP/reqTask/special/: chunk_manager.cpp  chunk_manager.h  specialsupply_req.cpp  specialsupply_req.h
src/common/communicateViaHTTP/server/baseMoudle/: httpserver_custom.cpp  httpserver_custom.h  register_funcs_base.cpp  register_funcs_base.h
src/common/communicateViaHTTP/server/config/: httpserver.json
src/common/communicateViaMQTT/: CMakeLists.txt  mqttcomm_ways.cpp  mqttcomm_ways.h
src/common/communicateViaMQTT/instance_manager/: mqttclient_instances.cpp  mqttclient_instances.h
src/common/communicateViaWebSocket/: CMakeLists.txt  websocket_server.h  websocketcomm_ways.h
src/common/communicateViaWebSocket/instance_manager/: websocket_server.cpp  websocket_server.h
src/interface/test/: test.h
src/special/: specialsupply_req.cpp  specialsupply_req.h
src/utils/: base64_trans.h  hash_create.h  license_parse.h  memory_access.h  symmetric_encryption.h
test/dns_timeout_test/: CMakeLists.txt
test/encrypt_decrypt_tool/: CMakeLists.txt  main.cpp
test/encrypt_decrypt_tool/src/speical/dpi_ota/: to_encrypted.cpp  to_encrypted.h
test/hash_test/: CMakeLists.txt  main.cpp
test/license_check/: CMakeLists.txt  main.cpp
test/mqtt_demo/: CMakeLists.txt  main.cpp
test/ota_app/: CMakeLists.txt  main.cpp
test/symmetric_encrypt_decrypt/: CMakeLists.txt  main.cpp
test/websocket_test/: CMakeLists.txt  main.cpp
